Style first and second block

--- a/src/styles/group.module.css
+++ b/src/styles/group.module.css
@@ -3,7 +3,7 @@
   width: 322px;
   height: 251px;
   background: transparent;
-  margin-left: 50px;
+  /* margin-left: 50px; */
 }
 .bell {
   color: #fff;
