--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -1,10 +1,54 @@
 .main {
   width: 100%;
   height: 800px;
+  padding-top: 86px;
+  padding-left: 60px;
   background: linear-gradient(
     45deg,
     rgba(31, 169, 17, 0.810119) 17.21%,
     #2f15d0 64.58%,
     black 100%
   );
+}
+.first_block {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 60px;
+}
+
+.cards {
+  width: 600px;
+  /* float: right; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+  /* bottom: 240px; */
+  margin-right: 100px;
+  flex-wrap: wrap;
+  /* background-color: aquamarine; */
+}
+
+.second_block {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 40px;
+  margin-top: 60px;
+}
+
+.Cohorts {
+  width: 335px;
+  height: 306px;
+  top: 409px;
+  left: 60px;
+  border-radius: 12px;
+  border: 1.5px;
+
+  box-shadow: 0px 14px 64px -4px rgba(24, 39, 75, 0.12);
+
+  box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12);
 }
