--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -1,8 +1,9 @@
 .heading {
   width: 400px;
-  height: 30px;
+  height: 20px;
   /* top: 737px*/
-  margin-left: 295px;
+  /* margin-left: 295px; */
+  margin: 30px 0 30px 295px;
 
   font-family: Inter;
   font-size: 25px;
@@ -14,11 +15,16 @@
 }
 
 .hr {
-  margin-top: 5px;
+  /* margin-top: 60px; */
   width: 695px;
-  top: 787px;
   rotate: -0 deg;
   /* width: 87%; */
   border: 1px solid rgba(229, 229, 230, 0.5);
   background: rgba(242, 242, 242, 1);
+}
+
+.vector {
+  width: 60px;
+  height: 60px;
+  margin-top: 164px;
 }
