--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -1,8 +1,8 @@
 .main {
-  width: 100%;
+  width: 95.8%;
   height: 1024px;
   padding-top: 86px;
-  padding-left: 60px;
+  padding-left: 4.19%;
   background: linear-gradient(
     45deg,
     rgba(31, 169, 17, 0.810119) 17.21%,
