--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -20,11 +20,21 @@
   rotate: -0 deg;
   /* width: 87%; */
   border: 1px solid rgba(229, 229, 230, 0.5);
-  background: rgba(242, 242, 242, 1);
+  color: #e5e5e680;
 }
 
 .vector {
   width: 60px;
   height: 60px;
-  margin-top: 164px;
+  margin-top: 120px;
+}
+
+.testimonials {
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  position: relative;
+  left: 110px;
+  bottom: 140px;
+  overflow-x: hidden;
 }
