Add styling in email input field

--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -28,6 +28,7 @@
   position: relative;
   /* bottom: 240px; */
   margin-right: 100px;
+  margin-top: -56px;
   flex-wrap: wrap;
   /* background-color: aquamarine; */
 }
