--- a/src/styles/Sign_up.module.css
+++ b/src/styles/Sign_up.module.css
@@ -30,13 +30,18 @@
 }
 
 .input {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
   width: 309px;
   height: 59px;
   padding: 0px 14px;
   border-radius: 8px;
   border: 1px solid #e5e5e6;
   margin-top: 24px;
-  color: #e5e5e6;
 }
 
 .button {
