--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -55,3 +55,25 @@
 
   box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12);
 }
+
+@media only screen and (max-width: 1200px) {
+  .main {
+    height: max-content;
+    width: 100%;
+  }
+  .first_block {
+    flex-direction: column;
+  }
+
+  .cards {
+    margin-top: 17px;
+    width: 800px;
+  }
+
+  .second_block {
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: flex-start;
+    row-gap: 24px;
+  }
+}
