--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -38,3 +38,15 @@
   bottom: 140px;
   overflow-x: hidden;
 }
+
+@media only screen and (max-width: 1400px) {
+  .heading {
+    width: 100px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .testimonials {
+    max-width: 650px;
+  }
+}
