--- a/src/styles/group.module.css
+++ b/src/styles/group.module.css
@@ -37,3 +37,10 @@
   text-align: right;
   padding-top: 17px;
 }
+
+@media only screen and (max-width: 1400px) {
+  .group_2 {
+    text-align: left;
+    padding-top: 15px;
+  }
+}
