Add media query for mobile responsive

--- a/src/styles/Frame.module.css
+++ b/src/styles/Frame.module.css
@@ -6,7 +6,6 @@
   font-family: Inter;
   padding: 20px;
   border-radius: 12px;
-
   background-color: #fff;
 }
 
@@ -16,7 +15,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  /* align-items: center; */
+  align-items: baseline;
   column-gap: 10px;
 }
 
@@ -54,4 +53,15 @@
   text-align: left;
   margin-top: 20px;
   color: #1d2129;
+}
+
+@media only screen and (min-width: 200px) and (max-width: 778px) {
+  .main {
+    height: fit-content;
+    padding-bottom: 6px;
+    margin: 1px 20px;
+  }
+  .para {
+    height: fit-content;
+  }
 }
