--- a/src/styles/group.module.css
+++ b/src/styles/group.module.css
@@ -44,3 +44,9 @@
     padding-top: 15px;
   }
 }
+
+@media only screen and (min-width: 200px) and (max-width: 778px) {
+  .group {
+    margin-left: 20px;
+  }
+}
