--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,17 @@
 .slider:hover .slide-track {
   animation-play-state: paused;
 }
+
+.carousel-control-next-icon {
+  background: transparent;
+}
+
+.carousel-control-prev-icon {
+  background: transparent;
+}
+
+.carousel-item {
+  -webkit-transition: -webkit-transform 1.5s ease-in-out !important;
+  -o-transition: -o-transform 1.5s ease-in-out !important;
+  transition: transform 1.5s ease-in-out !important;
+}
