--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -77,3 +77,22 @@
     row-gap: 24px;
   }
 }
+
+/* mobile  */
+
+@media only screen and (min-width: 200px) and (max-width: 778px) {
+  .main {
+    padding: 0;
+    padding-top: 25px;
+  }
+
+  .second_block {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .Cohorts {
+    width: 300px;
+    height: 280px;
+  }
+}
