--- a/src/styles/Sign_up.module.css
+++ b/src/styles/Sign_up.module.css
@@ -94,3 +94,14 @@ left: 950px */
     border-bottom-left-radius: 50px;
   }
 }
+
+@media only screen and (max-width: 1000px) {
+  .signup {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 200px) and (max-width: 778px) {
+  .signup {
+  }
+}
