--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -50,3 +50,27 @@
     max-width: 650px;
   }
 }
+
+@media only screen and (min-width: 200px) and (max-width: 778px) {
+  .heading {
+    width: 100px;
+    margin: 60px auto 20px 35px;
+  }
+  .hr {
+    width: 85%;
+    margin: 2px auto;
+  }
+
+  .testimonials {
+    margin: 0 auto;
+    left: 0;
+    width: 100%;
+    height: fit-content;
+  }
+
+  .vector {
+    position: relative;
+    top: 120px;
+    left: 30px;
+  }
+}
