--- a/src/styles/Sign_up.module.css
+++ b/src/styles/Sign_up.module.css
@@ -101,7 +101,30 @@ left: 950px */
   }
 }
 
-@media only screen and (min-width: 200px) and (max-width: 778px) {
-  .signup {
+@media only screen and (min-width: 200px) and (max-width: 1000px) {
+  .signup_mo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #ffffff;
+    width: 100%;
+    height: 90vh;
+    border-radius: 5px;
+    padding-bottom: 20%;
+  }
+
+  .signup_detail {
+    width: 100%;
+    max-width: 365px;
+    /* margin-top: 100px; */
+  }
+
+  .span {
+    width: 340px;
+  }
+
+  .show {
+    display: inline;
+    background-color: red;
   }
 }
