--- a/src/styles/Landing_page.module.css
+++ b/src/styles/Landing_page.module.css
@@ -78,6 +78,12 @@
   }
 }
 
+@media only screen and (max-width: 1000px) {
+  .cards {
+    width: 1000px;
+  }
+}
+
 /* mobile  */
 
 @media only screen and (min-width: 200px) and (max-width: 778px) {
