Fix the width of card 1 input

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -42,17 +42,22 @@
 }
 
 .input {
-  width: 136.1px;
+  width: 161.7px;
   height: 35px;
   margin-left: 14px;
   margin-right: 14px;
   padding: 0 12px;
   border-radius: 5.6px;
-  background: linear-gradient(0deg, #d4d4d4, #d4d4d4),
-    linear-gradient(0deg, #ffffff, #ffffff);
   border: 0.7px solid rgba(212, 212, 212, 1);
   margin-top: 15.5px;
   background: #fff;
+  /* //styleName: Caption; */
+  font-family: Inter;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: left;
 }
 
 /* card 2 */
